# nlogic_task

task1/: a.json  b.json  main.py  pyproject.toml
task2/: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
task2/api/: api.py
task2/image_uploader/: uploader.py
task2/s3_adapter/: adapter.py
