[tool.poetry]
name = "task2"
version = "0.1.0"
description = ""
authors = ["Nikita Deryushev <nec-d@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.65.1"
minio = "^7.0.3"
loguru = "^0.5.3"
click = "^8.0.1"
requests = "^2.25.1"
uvicorn = {extras = ["standard"], version = "^0.14.0"}
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
black = "^21.5b2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
